# markets-report

./: .gitignore  main.py  pyproject.toml
.github/workflows/: daily-report.yml
data/archive/: 2025-10-12.html
src/: analyzer.py  main.py  reporter.py
src/collectors/: crypto.py  news.py  onchain.py  tradfi.py
src/reports/: report_20251013.html  report_20251014.html  report_20251015.html  report_20251016.html  report_20251017.html  report_20251018.html  report_20251019.html  report_20251020.html  report_20251021.html  report_20251022.html  report_20251023.html  report_20251024.html  report_20251025.html  report_20251026.html  report_20251027.html  report_20251028.html  report_20251029.html  report_20251030.html  report_20251031.html  report_20251101.html  report_20251102.html  report_20251103.html  report_20251104.html  report_20251105.html  report_20251106.html  report_20251107.html  report_20251108.html  report_20251109.html  report_20251110.html  report_20251111.html  report_20251112.html  report_20251113.html  report_20251114.html  report_20251115.html  report_20251116.html  report_20251117.html  report_20251118.html  report_20251119.html  report_20251120.html  report_20251121.html  (+112 more)
src/templates/: daily_report.html
templates/: daily_report.html
